# quiz_bot

./: .env .example  .gitignore  README.md  bot_processing.py  load_questions.py  pyproject.toml  questions.json.example  settings.py  telegram_bot.py  text_processing.py  vk_bot.py
telegram_bot/: log_handlers.py  settings.py  telegram_bot.py
